Finished Accessories portion
Soe very long description of what all was done in this commit

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <li><a href="#/contactus">Contact Us</a></li>
         <li><a href="#/vehicles">Vehicles</a></li>
         <li><a href="#/contactme">Contact Me</a></li>
-        <li><a href="#/partsandservice">Parts and Service</a></li>
         <li><a href="#/accessories">Accessories</a></li>
+        <li><a href="#/partsandservice">Parts and Services</a></li>
       </ul>
     </nav>
   </header>
